--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongoose": "^4.10.7",
     "nodemon": "^1.11.0"
   }
 }
